# standaert-ha

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  gpio_test.cpp  i2c_test.cpp  main.cpp  sketch.fzz
.github/workflows/: build-bridge.yaml
bridge/: .editorconfig  Cargo.toml
bridge/doc/shal/: README.md  vm.md
bridge/src/: args.rs  main.rs
bridge/src/controller/: button_event.rs  command.rs  event.rs  message.rs  mod.rs  program_header.rs
bridge/src/handlers/: ctrlc_handler.rs  handler.rs  handler_chain.rs  logger.rs  message.rs  mod.rs  mqtt_handler.rs  programmer.rs  refresher.rs  serial_handler.rs
bridge/src/shal/: ast.rs  bytecode.rs  common.rs  compiler.rs  interpreter.rs  mod.rs  parser.rs  shal.pest  tests.rs
bridge/static/: 1to1.shal  short.shal  standaertha.shal
cmake/: CheckLinuxI2C.cmake
config/: Light.cpp  Light.hpp  LightGroup.cpp  LightGroup.hpp  conditions.cpp  conditions.hpp  model.hpp
controller/: .clang-tidy  .editorconfig  INSTALL.md  LICENSE  README.md  platformio.ini
controller/doc/: bytecode.md  communication.md  config.md  serial.md  stack_bytecode.md
controller/include/: button_event.h  button_event.hpp  comm.hpp  command.h  command.hpp  config.h  config.hpp  constants.hpp  dsl.hpp  dsl.ipp  errors.hpp  inet.hpp  messages.hpp  slip.h  slip.hpp  standaert_ha.h  state.hpp  util.hpp
controller/include/collections/: bitset32.hpp  bitstack32.hpp
controller/include/comm/: button_event.hpp  command.hpp  event.hpp  message.hpp  serial.hpp
controller/include/hal/: io.hpp  mode.hpp
controller/include/shal/: bytecode.hpp  interpreter.hpp
controller/include/util/: crc.hpp  inet.hpp  pred.hpp  slip.hpp
controller/src/: comm.cpp  config.cpp  dsl.cpp  main.cpp  slip.cpp  state.cpp
controller/src/comm/: message.cpp  serial.cpp
controller/src/hal/: io.cpp  mode.cpp
controller/src/shal/: interpreter.cpp
controller/src/util/: crc.cpp  slip.cpp
doc/: .gitignore  requirements.doc  serial.md
doc/shal/: language.md
gateway/: .gitignore  Cargo.toml  README.md
gateway/src/: config.rs  main.rs  webthing.rs
gateway/src/mqtt/: homie.rs  mod.rs
hardware/: mcp23017.cpp  mcp23017.hpp
monaco/: monarch.js
mqtt-gateway/: Cargo.toml
mqtt-gateway/configs/: config.toml
mqtt-gateway/src/: config.rs  lib.rs  main.rs  webthing.rs
mqtt-gateway/src/mqtt/: homeassistant.rs  homie.rs  mod.rs
pcb/: README.md  bom.md  i2clevel.bak  input.bak  input.sch  opto.bak  opto.sch  out_with_led.bak  out_with_led.sch  output.bak  output.sch  pcb-cache.lib  pcb.bak  pcb.dsn  pcb.kicad_pcb  pcb.kicad_pcb-bak  pcb.lib  pcb.net  pcb.pro  pcb.sch  pcb.xml  sym-lib-table  usbcomm.sch
scripts/: command.py  logger.py  toggler.py
src/Hardware/: I2CBus.cpp  I2CBus.hpp  I2CBusDevice.cpp  I2CBusDevice.hpp  I2CDevice.cpp  I2CDevice.hpp  LinuxI2CBus.cpp  LinuxI2CBus.hpp  MCP23017.cpp  MCP23017.hpp
test/: CMakeLists.txt  mcp23017_blink.cpp
