[package]
name = "standaertha-mqtt-gateway"
version = "0.1.0"
authors = ["Roel Standaert <roel@abittechnical.com>"]
edition = "2018"

[dependencies]
# For serial
crc16 = "*"
serialport = { git = "https://gitlab.com/susurrus/serialport-rs", default-features = false }
# For config
toml = "0.5"
serde = "1"
serde_derive = "1"
serde_millis = "0.1"
# For args
clap = "2"
# For logging
log = "0.4"
env_logger = "0.6"
# For task queueing
mio = "0.5"
# For MQTT and Web Thing
serde_json = "1.0"
# For MQTT
rumqtt = { version = "0.30", optional = true }
# For Web Thing
webthing = { version = "0.12", optional = true }
uuid = "0.7"

[features]
default = ["mqtt", "webthing"]
mqtt = ["rumqtt"]
