[package]
name = "standaertha-mqtt-gateway"
version = "0.1.0"
authors = ["Roel Standaert <roel@abittechnical.com>"]
edition = "2018"

[dependencies]
# General control
ctrlc = { version = "3.1", features = ["termination"] }
# For serial
crc16 = "*"
serialport = { version = "3.3", default-features = false }
# For config
toml = "0.5"
serde = "1"
serde_derive = "1"
serde_millis = "0.1"
# For args
clap = "2"
# For logging
log = "0.4"
pretty_env_logger = "0.3"
# For task queueing
crossbeam = "=0.7.2"
# For MQTT and Web Thing
serde_json = "1.0"
# For MQTT
rumqtt = { version = "0.31", optional = true }
regex = { version = "1", optional = true }
# For Web Thing
webthing = { version = "0.12", optional = true }
uuid = { version = "0.8", optional = true, features = ["v4"] }

[features]
default = ["mqtt", "webthings"]
mqtt = ["rumqtt", "regex"]
webthings = ["webthing", "uuid"]
